Updated website title

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | The Rehab House</title>
+    <title>Home | The Rehab House - Update</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -26,7 +28,7 @@
             <button onclick="triggerSearch()"><img src="images/search-icon.png" alt="Search"></button>
         </div>
     </header>
-    
+
     <!-- Hero Section -->
     <section class="hero">
         <h2>South Mumbai's First Neuro-rehabilitation Centre with Admission Facility</h2>
@@ -69,23 +71,24 @@
         </div>
     </section>
 
-  <!-- Footer -->
-  <footer>
-    <div class="footer-content">
-        <p class="footer-left">&copy; 2025 The Rehab House</p>
+    <!-- Footer -->
+    <footer>
+        <div class="footer-content">
+            <p class="footer-left">&copy; 2025 The Rehab House</p>
 
-        <!-- Social Media -->
-        <div class="footer-right">
-            <h2>Follow Us</h2>
-            <a href="#" class="social-icon"><img src="images/facebook-icon.png" alt="Facebook"></a>
-            <a href="#" class="social-icon"><img src="images/instagram-icon.png" alt="Instagram"></a>
-            <a href="#" class="social-icon"><img src="images/twitter-icon.png" alt="Twitter"></a>
+            <!-- Social Media -->
+            <div class="footer-right">
+                <h2>Follow Us</h2>
+                <a href="#" class="social-icon"><img src="images/facebook-icon.png" alt="Facebook"></a>
+                <a href="#" class="social-icon"><img src="images/instagram-icon.png" alt="Instagram"></a>
+                <a href="#" class="social-icon"><img src="images/twitter-icon.png" alt="Twitter"></a>
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
 
 
     <!-- JavaScript -->
     <script src="js/main.js"></script>
 </body>
+
 </html>
