--- a/index.html
+++ b/index.html
@@ -34,42 +34,35 @@
         <h2>South Mumbai's First Neuro-rehabilitation Centre with Admission Facility</h2>
     </section>
 
-    <!-- Highlights Section -->
-    <section class="highlights">
-        <h1>Why Choose The Rehab House?</h1>
-        <div class="highlight-grid">
-            <div class="highlight-card">
-                <p>✔ Wheelchair-Accessible</p>
+   <!-- Highlights Section -->
+<section id="highlights">
+    <div class="highlights-container">
+        <!-- Central Circle -->
+        <div class="main-circle">
+            <h2>South Mumbai's First Neuro-rehabilitation Centre with Admission Facility</h2>
+        </div>
+        
+        <!-- Highlight Cards -->
+        <div class="highlight-cards">
+            <div class="highlight-card" data-desc="Description for Feature 1">
+                <img src="img/icon1.png" alt="Feature 1">
+                <h3>Feature 1</h3>
             </div>
-            <div class="highlight-card">
-                <p>✔ Lift Available</p>
+            <div class="highlight-card" data-desc="Description for Feature 2">
+                <img src="img/icon2.png" alt="Feature 2">
+                <h3>Feature 2</h3>
             </div>
-            <div class="highlight-card">
-                <p>✔ Day Care Facility</p>
+            <div class="highlight-card" data-desc="Description for Feature 3">
+                <img src="img/icon3.png" alt="Feature 3">
+                <h3>Feature 3</h3>
             </div>
-            <div class="highlight-card">
-                <p>✔ Admission Facility for Rehabilitation</p>
-            </div>
-            <div class="highlight-card">
-                <p>✔ Multiple Physiotherapy Sessions per Day</p>
-            </div>
-            <div class="highlight-card">
-                <p>✔ Physical, Cognitive, Occupational, Speech Therapy – All under One Roof</p>
-            </div>
-            <div class="highlight-card">
-                <p>✔ In-house Nutritionist, Psychologist, Orthotist</p>
-            </div>
-            <div class="highlight-card">
-                <p>✔ Diagnostic Tests: Blood Tests, X-rays, DEXA Scan, ECG, Neurogenetic Testing</p>
-            </div>
-            <div class="highlight-card">
-                <p>✔ Manual Therapy to Robotic Rehabilitation</p>
-            </div>
-            <div class="highlight-card">
-                <p>✔ Personalized Rehabilitation Plans</p>
+            <div class="highlight-card" data-desc="Description for Feature 4">
+                <img src="img/icon4.png" alt="Feature 4">
+                <h3>Feature 4</h3>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Footer -->
     <footer>
