--- a/index.html
+++ b/index.html
@@ -44,21 +44,45 @@
         
         <!-- Highlight Cards -->
         <div class="highlight-cards">
-            <div class="highlight-card" data-desc="Description for Feature 1">
+            <div class="highlight-card" data-desc= test>
                 <img src="img/icon1.png" alt="Feature 1">
-                <h3>Feature 1</h3>
+                <h3>✔ Wheelchair-Accessible</h3>
             </div>
             <div class="highlight-card" data-desc="Description for Feature 2">
                 <img src="img/icon2.png" alt="Feature 2">
-                <h3>Feature 2</h3>
+                <h3>✔ Lift Available</h3>
             </div>
             <div class="highlight-card" data-desc="Description for Feature 3">
                 <img src="img/icon3.png" alt="Feature 3">
-                <h3>Feature 3</h3>
+                <h3>✔ Day Care Facility</h3>
             </div>
             <div class="highlight-card" data-desc="Description for Feature 4">
                 <img src="img/icon4.png" alt="Feature 4">
-                <h3>Feature 4</h3>
+                <h3>✔ Admission Facility for Rehabilitation</h3>
+            </div>
+            <div class="highlight-card" data-desc="Description for Feature 5">
+                <img src="img/icon4.png" alt="Feature 5">
+                <h3>✔ Multiple Physiotherapy Sessions per Day</h3>
+            </div>
+            <div class="highlight-card" data-desc="Description for Feature 6">
+                <img src="img/icon4.png" alt="Feature 6">
+                <h3>✔ Physical, Cognitive, Occupational, Speech Therapy – All under One Roof</h3>
+            </div>
+            <div class="highlight-card" data-desc="Description for Feature 7">
+                <img src="img/icon4.png" alt="Feature 7">
+                <h3>✔ In-house Nutritionist, Psychologist, Orthotist</h3>
+            </div>
+            <div class="highlight-card" data-desc="Description for Feature 8">
+                <img src="img/icon4.png" alt="Feature 8">
+                <h3>✔ Diagnostic Tests: Blood Tests, X-rays, DEXA Scan, ECG, Neurogenetic Testing</h3>
+            </div>
+            <div class="highlight-card" data-desc="Description for Feature 9">
+                <img src="img/icon4.png" alt="Feature 9">
+                <h3>✔ Manual Therapy to Robotic Rehabilitation</h3>
+            </div>
+            <div class="highlight-card" data-desc="Description for Feature 10">
+                <img src="img/icon4.png" alt="Feature 10">
+                <h3>✔ Personalized Rehabilitation Plans</h3>
             </div>
         </div>
     </div>
