Update content, add service images, fix search, and refine mobile design

--- a/about_us.html
+++ b/about_us.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -26,79 +28,121 @@
             <button onclick="triggerSearch()"><img src="images/search-icon.png" alt="Search"></button>
         </div>
     </header>
-    
-<section class="hero">
-    <h2>South Mumbai's First Neuro-rehabilitation Centre with Admission Facility</h2>
-</section>
+
+    <section class="hero">
+        <h2>South Mumbai's First Neuro-rehabilitation Centre with Admission Facility</h2>
+    </section>
     <!-- Main Content -->
     <main>
         <section class="about-header">
             <h1>About Us</h1>
             <p>Providing comprehensive rehabilitation programs tailored to individual needs.</p>
         </section>
-      
+
         <section class="who-benefits">
-            <h2>Who Will Benefit from Our Services?</h2>
+            <h2>Who will benefits from our services:</h2>
             <ul>
-                <li>✔ Neurological conditions: Stroke, MS, GBS, spinal cord injury, Parkinson’s, Traumatic Brain Injury, Dementia, Alzheimer’s, Vertigo, etc.</li>
-                <li>✔ Orthopedic conditions: Post-surgery recovery, arthritis, frozen shoulder, fractures, sports injuries, chronic pain.</li>
-                <li>✔ Pediatric care: Developmental delays, Cerebral Palsy, Autism, Down’s Syndrome, ADHD, Spina Bifida.</li>
-                <li>✔ Aged population: Reduced mobility, balance issues, frequent falls, cognitive decline.</li>
-                <li>✔ Other conditions requiring structured inpatient rehabilitation.</li>
+                <li>✔ <strong>With Neurological conditions requiring intensive rehabilitation</strong> (Stroke, MS, GBS,
+                    spinal cord injury, Parkinson’s disease, traumatic brain injury, Dementia, Alzheimer's, Vertigo
+                    etc).</li>
+                <li>✔ <strong>With orthopedic conditions</strong> (Post hip & knee replacement, spine surgery, ligament
+                    reconstruction, Arthritis, Frozen shoulder, Spondylitis, Foot Deformities, Fractures, Heel/ Neck/
+                    Knee/ Back/ Shoulder Pain, Sports Injuries, Scoliosis, Tingling & Numbness).</li>
+                <li>✔ <strong>Pediatric Population</strong> (With Developmental delays, Cerebral Palsy, Learning
+                    disorders, Autism, Down's Syndrome, Hyperactivity Disorders, Attention Deficit disorders, Spina
+                    Bifida)</li>
+                <li>✔ <strong>Aged population</strong> (With reduced mobility, frequent falls, aches & pains, balance
+                    issues, Urinary Incontinence, Cognitive Decline)</li>
+                <li>✔ Any other condition requiring structured inpatient rehabilitation as determined by the consulting
+                    physiotherapist or referring physician.</li>
             </ul>
         </section>
 
         <section class="how-different">
-            <h2>How Are We Different?</h2>
+            <h2>How are we different</h2>
 
             <div class="difference-card">
-                <h3>Faster Recovery Through Admission Facility</h3>
-                <p>Patients requiring intensive rehabilitation can benefit from multiple daily sessions, improving various domains at once for faster recovery.</p>
+                <h3>Faster Recovery through Admission Facility</h3>
+                <p>Neurologically affected patients may take longer for recovery. It is only possible to take 2/3/4
+                    treatment sessions per day in a Physiotherapy admission facility like ours. With multiple sessions
+                    per day, with each session focusing on a different problem (like walking, Balance training,
+                    cognitive rehabilitation, Hand strengthening, etc), the patient will recover faster with improvement
+                    in various domains all at once.</p>
             </div>
 
             <div class="difference-card">
-                <h3>Multispeciality Collaborative Approach</h3>
-                <p>Our team of experts—including physiotherapists, occupational therapists, speech therapists, neurologists, and psychologists—works together to provide a **unified care plan**.</p>
+                <h3>Multispeciality Collaborative Approach:</h3>
+                <p>Patients often get confused with different opinions coming from different specialists. At The Rehab
+                    House, the Rehabilitation team including the Physical, Cognitive, Occupational , Speech Therapists,
+                    the Neurologist, the Orthotist, the Dietician and the Psychologist work together to give a unified
+                    care plan.</p>
             </div>
 
             <div class="difference-card">
                 <h3>Making Caregiving Easy</h3>
-                <p>We guide family members and caregivers on how to handle and support patients, easing their physical burden while improving emotional availability.</p>
+                <p>Medical Conditions & Aging ring our bells and say 'Surprise!'. The family members and the caregivers
+                    are never prepared for this change. At The Rehab House, the caregivers get an insight of how to
+                    handle the patients, how to transfer/ dress/ motivate them. With the help of the support staff at
+                    The Rehab House, the sudden physical burden imposed on the family member is reduced and they can
+                    become emotionally and socially more available to take care of the patient well.</p>
             </div>
 
             <div class="difference-card">
-                <h3>All Services Under One Roof</h3>
-                <p>From **physiotherapy to diagnostics like X-rays, blood tests, ECGs**, and neurogenetic testing, we provide a one-stop solution for rehabilitation.</p>
+                <h3>All Services under one roof</h3>
+                <p>Patients are often seen travelling from one place to another to seek consultations, treatments, blood
+                    tests, xrays, and other diagnostic tests. The Rehab House is a one stop solution with all the
+                    specialists and services available for the patient at one place.</p>
             </div>
 
             <div class="difference-card">
                 <h3>Specialized Rehabilitation Programs</h3>
-                <p>We ensure engaging and innovative treatment strategies that keep our patients motivated throughout their rehabilitation journey.</p>
+                <p>We do understand that this long journey of recovery can be boring. At The Rehab House, with our
+                    innovative and creative treatment strategies we assure better engagement and motivation for our
+                    patients.</p>
             </div>
 
             <div class="difference-card">
                 <h3>Discharge Protocol for a Smooth Transition</h3>
-                <p>Our goal is to help patients **recover faster, regain independence, and return to normal life as soon as possible**.</p>
+                <p>We believe Physiotherapy is a form of Medical Treatment and not a wellness program. And so, at The
+                    Rehab House, we aim at giving multiple treatment sessions per day for a faster recovery and a
+                    shorter hospitalisation stay, making it economically, socially and emotionally easier for the
+                    patient to get back to normalcy. We believe our patients must become independent soon and move ahead
+                    in their lives after getting treated and discharged from The Rehab House.</p>
             </div>
         </section>
-    </main>
-  <!-- Footer -->
-  <footer>
-    <div class="footer-content">
-        <p class="footer-left">&copy; 2025 The Rehab House</p>
-
-        <!-- Social Media -->
-        <div class="footer-right">
-            <h2>Follow Us</h2>
-            <a href="#" class="social-icon"><img src="images/facebook-icon.png" alt="Facebook"></a>
-            <a href="#" class="social-icon"><img src="images/instagram-icon.png" alt="Instagram"></a>
-            <a href="#" class="social-icon"><img src="images/twitter-icon.png" alt="Twitter"></a>
         </div>
-    </div>
-</footer>
+
+        <div class="difference-card">
+            <h3>Specialized Rehabilitation Programs</h3>
+            <p>We ensure engaging and innovative treatment strategies that keep our patients motivated throughout
+                their rehabilitation journey.</p>
+        </div>
+
+        <div class="difference-card">
+            <h3>Discharge Protocol for a Smooth Transition</h3>
+            <p>Our goal is to help patients **recover faster, regain independence, and return to normal life as soon
+                as possible**.</p>
+        </div>
+        </section>
+    </main>
+    <!-- Footer -->
+    <footer>
+        <div class="footer-content">
+            <p class="footer-left">&copy; 2025 The Rehab House</p>
+
+            <!-- Social Media -->
+            <div class="footer-right">
+                <h2>Follow Us</h2>
+                <a href="#" class="social-icon"><img src="images/facebook-icon.png" alt="Facebook"></a>
+                <a href="#" class="social-icon"><img src="images/instagram-icon.png" alt="Instagram"></a>
+                <a href="#" class="social-icon"><img src="images/twitter-icon.png" alt="Twitter"></a>
+            </div>
+        </div>
+    </footer>
 
 
     <!-- JavaScript -->
     <script src="js/main.js"></script>
 </body>
+
 </html>
