--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <h2>South Mumbai's First Neuro-rehabilitation Centre with Admission Facility</h2>
+        <h2>THE REHAB HOUSE<br>South Mumbai's First Neuro-rehabilitation Centre with Admission Facility</h2>
     </section>
 
     <!-- Highlights Section -->
     <section class="highlights">
-        <h1>Why Choose The Rehab House?</h1>
+        <h1>Highlights</h1>
         <div class="highlight-grid">
             <div class="highlight-card">
                 <p>✔ Wheelchair-Accessible</p>
             </div>
             <div class="highlight-card">
-                <p>✔ Lift Available</p>
+                <p>✔ Lift available</p>
             </div>
             <div class="highlight-card">
                 <p>✔ Day Care Facility</p>
@@ -51,16 +51,16 @@
                 <p>✔ Admission Facility for Rehabilitation</p>
             </div>
             <div class="highlight-card">
-                <p>✔ Multiple Physiotherapy Sessions per Day</p>
+                <p>✔ Multiple Physiotherapy sessions per day</p>
             </div>
             <div class="highlight-card">
-                <p>✔ Physical, Cognitive, Occupational, Speech Therapy – All under One Roof</p>
+                <p>✔ Physical, Cognitive, Occupational, Speech Therapy- All under one roof</p>
             </div>
             <div class="highlight-card">
-                <p>✔ In-house Nutritionist, Psychologist, Orthotist</p>
+                <p>✔ In house Nutritionist, Psychologist, Orthotist</p>
             </div>
             <div class="highlight-card">
-                <p>✔ Diagnostic Tests: Blood Tests, X-rays, DEXA Scan, ECG, Neurogenetic Testing</p>
+                <p>✔ Diagnostic tests- Blood tests, Xrays, DEXA Scan, ECG, Neurogenetic Testing</p>
             </div>
             <div class="highlight-card">
                 <p>✔ Manual Therapy to Robotic Rehabilitation</p>
