--- a/services.html
+++ b/services.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -26,7 +28,7 @@
             <button onclick="triggerSearch()"><img src="images/search-icon.png" alt="Search"></button>
         </div>
     </header>
-    
+
     <!-- Main Content -->
     <main>
         <section class="services-header">
@@ -35,7 +37,7 @@
         </section>
 
         <hr>
-        
+
         <section class="service-list">
             <h2>Our Key Programs</h2>
             <hr><br>
@@ -45,7 +47,8 @@
                     <img src="images/balance-training.jpg" alt="Balance & Postural Control">
                     <div class="service-content">
                         <h3>Balance & Postural Control</h3>
-                        <p class="service-details" id="service1">Fall Prevention Strategies using Interactive Motion Sensors.</p>
+                        <p class="service-details" id="service1">Drills with Fall Prevention Strategies through
+                            Interactive Motion Sensors</p>
                     </div>
                 </div>
 
@@ -61,7 +64,7 @@
                     <img src="images/visual-therapy.jpg" alt="Visual Therapy">
                     <div class="service-content">
                         <h3>Visual Therapy</h3>
-                        <p class="service-details" id="service3">Improving vision deficits caused by neurological conditions.</p>
+                        <p class="service-details" id="service3">For Vision deficits due to Neurological Conditions</p>
                     </div>
                 </div>
 
@@ -69,7 +72,7 @@
                     <img src="images/spasticity-management.jpg" alt="Spasticity & Posture Management">
                     <div class="service-content">
                         <h3>Spasticity & Posture Management</h3>
-                        <p class="service-details" id="service4">Helping patients correct posture and improve mobility.</p>
+                        <p class="service-details" id="service4">With Strategies to improve Sedentary Lifestyle</p>
                     </div>
                 </div>
 
@@ -77,7 +80,8 @@
                     <img src="images/cognitive-training.jpg" alt="Cognition-Enhancing Activities">
                     <div class="service-content">
                         <h3>Cognition-Enhancing Activities</h3>
-                        <p class="service-details" id="service5">Memory, Attention, and Mental Agility Training using Board & Screen Games.</p>
+                        <p class="service-details" id="service5">With multiple Pen & Paper Activities, Board & Screen
+                            Games- for Memory, Attention, Reaction Time and Mental Agility Training</p>
                     </div>
                 </div>
 
@@ -85,7 +89,8 @@
                     <img src="images/pain-management.jpg" alt="Pain Management">
                     <div class="service-content">
                         <h3>Pain Management</h3>
-                        <p class="service-details" id="service6">Includes Dry Needling, Cupping, Manipulations, Kinesiotaping, and Electrotherapy Machines.</p>
+                        <p class="service-details" id="service6">Includes Dry Needling, Cupping, Manipulations,
+                            Kinesiotaping, and Electrotherapy Machines.</p>
                     </div>
                 </div>
             </div>
@@ -95,12 +100,12 @@
 
         <!-- 7 Unique Sections -->
         <section class="rehab-sections">
-            <h2>Our 7 Unique Sections for Comprehensive Rehabilitation</h2>
+            <h2>Our 7 Uniquely curated Sections for Comprehensive Rehabilitation</h2>
             <ul>
                 <li>✔ Gait & Mobility Training</li>
-                <li>✔ Equipment-based Strength & Conditioning</li>
+                <li>✔ Equipment based Strength & Conditioning</li>
                 <li>✔ Electrotherapeutic Modalities</li>
-                <li>✔ Hand Function & Fine Motor Training</li>
+                <li>✔ Hand function & Fine Motor Training</li>
                 <li>✔ Cognitive Rehabilitation</li>
                 <li>✔ Robotic Rehabilitation</li>
                 <li>✔ Supervised IPD Facility</li>
@@ -127,4 +132,5 @@
     <!-- JavaScript -->
     <script src="js/main.js"></script>
 </body>
+
 </html>
