--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -26,7 +28,7 @@
             <button onclick="triggerSearch()"><img src="images/search-icon.png" alt="Search"></button>
         </div>
     </header>
-    
+
     <!-- Main Content -->
     <main>
         <section class="contact-header">
@@ -37,7 +39,7 @@
         <!-- Contact Information -->
         <section class="contact-info">
             <h2>Clinic Address</h2>
-            <p>📍 <strong>Purandare Diagnostic Centre, Dr. Purandare Hospital</strong><br>
+            <p>📍 <strong>Purandare Diagnostic Centre, Dr Purandare Hospital</strong><br>
                 Opposite Girgaon Chowpatty, Charni Road, Mumbai</p>
             <p>📞 <strong>9653699526 / 7208343583</strong></p>
             <p>🌐 <a href="https://www.therehabhouse.in">www.therehabhouse.in</a></p>
@@ -46,7 +48,8 @@
         <!-- Google Map -->
         <section class="map">
             <h2>Find Us on Google Maps</h2>
-            <iframe src="https://maps.google.com/maps?q=Purandare%20Diagnostic%20Centre%20Mumbai&t=&z=15&ie=UTF8&iwloc=&output=embed" 
+            <iframe
+                src="https://maps.google.com/maps?q=Purandare%20Diagnostic%20Centre%20Mumbai&t=&z=15&ie=UTF8&iwloc=&output=embed"
                 width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen>
             </iframe>
         </section>
@@ -102,11 +105,11 @@
             </form>
         </section>
         <!-- Profile Popup Window -->
-<div class="popup-overlay" id="popupOverlay" onclick="closePopup()"></div>
-<div class="profile-popup" id="profilePopup">
-    <span class="close-popup" onclick="closePopup()">×</span>
-    <iframe id="profileFrame" src="" frameborder="0"></iframe>
-</div>
+        <div class="popup-overlay" id="popupOverlay" onclick="closePopup()"></div>
+        <div class="profile-popup" id="profilePopup">
+            <span class="close-popup" onclick="closePopup()">×</span>
+            <iframe id="profileFrame" src="" frameborder="0"></iframe>
+        </div>
 
 
         <!-- Footer -->
@@ -124,7 +127,8 @@
             </div>
         </footer>
 
-    <!-- JavaScript -->
-    <script src="js/main.js"></script>
+        <!-- JavaScript -->
+        <script src="js/main.js"></script>
 </body>
+
 </html>
