--- a/profiles/dr-vidhi.html
+++ b/profiles/dr-vidhi.html
@@ -1,11 +1,31 @@
 <div>
-<div>Dr. Vidhi Dave, the co-founder of The Rehab House is a renowned physiotherapist with a passion for neuro-rehabilitation. With 7 years long dream of establishing an Admission based Neuro-Rehabilitation Centre, she has dedicated her life to helping patients recover and thrive. She has completed her graduation from D.Y. Patil University and post graduation in Neurosciences from NMIMS University and Nanavati Superspeciality Hospital. Dr. Vidhi is also a certified Cognitive Rehabilitation Specialist, a certified NDS Practitioner, and a certified Pilates Instructor for ANC and PNC.</div>
-<br />
-<div>Throughout her career, Dr. Dave has worked with various hospitals &nbsp;in Mumbai, including Purandare Hospital, Life Care Hospital, Sushrusha Hospital, Symbiosis Hospital, Sparsh Hospital, ACME Hospital. She has also extended her services on OPD Basis in multiple clinical set ups in Mumbai at The Rehab House, GSBS Medical Trust and Dr Nelie Rustomjee Medical Centre. Her extensive and diverse education, training and experience has equipped her with the skills and knowledge necessary to provide top-notch care to her patients.</div>
-<br />
-<div>She is an excellent speaker, delivering lectures on neuro-rehabilitation and physiotherapy to patients, caregivers, community and budding healthcare professionals. Her acheivements in social work and leadership sectors and innumerable and have been vastly recognized through numerous awards and media features, including interviews on radio channels, foreign magazines, and international conferences. She is continually learning to be updated with all the upcoming recent advances to help her patients better.</div>
-<br />
-<div>Dr. Dave is known for her calm, empathetic, and supportive demeanor. She has a stern personality, with a soft heart and a healing hand.</div>
-<br />
-<div>Through this venture, Dr. Vidhi Dave has hopes to make neuro-rehabilitation accessible in near future, to those in need, regardless of their financial background. With her compassion and beliefs for helping others, Dr. Dave is poised to make a lasting impact in the field of neuro-rehabilitation.</div>
+    <h3>Meet Dr. Vidhi Dave: A Leading Expert in Neuro-Rehabilitation</h3>
+    <br>
+    <img src="../images/dr-vidhi.jpeg" alt="Dr. Vidhi Dave"
+        style="width: 150px; border-radius: 10px; float: left; margin-right: 15px;">
+    <p>Dr. Vidhi Dave, the co-founder of The Rehab House is a renowned physiotherapist with a passion for
+        neuro-rehabilitation. With 7 years long dream of establishing an Admission based Neuro-Rehabilitation Centre,
+        she has dedicated her life to helping patients recover and thrive. She has completed her graduation from D.Y.
+        Patil University and post graduation in Neurosciences from NMIMS University and Nanavati Superspeciality
+        Hospital. Dr. Vidhi is also a certified Cognitive Rehabilitation Specialist, a certified NDS Practitioner, and a
+        certified Pilates Instructor for ANC and PNC.</p>
+    <br>
+    <p>Throughout her career, Dr. Dave has worked with various hospitals in Mumbai, including Purandare Hospital, Life
+        Care Hospital, Sushrusha Hospital, Symbiosis Hospital, Sparsh Hospital, ACME Hospital. She has also extended her
+        services on OPD Basis in multiple clinical set ups in Mumbai at The Rehab House, GSBS Medical Trust and Dr Nelie
+        Rustomjee Medical Centre. Her extensive and diverse education, training and experience has equipped her with the
+        skills and knowledge necessary to provide top-notch care to her patients.</p>
+    <br>
+    <p>She is an excellent speaker, delivering lectures on neuro-rehabilitation and physiotherapy to patients,
+        caregivers, community and budding healthcare professionals. Her acheivements in social work and leadership
+        sectors and innumerable and have been vastly recognized through numerous awards and media features, including
+        interviews on radio channels, foreign magazines, and international conferences. She is continually learning to
+        be updated with all the upcoming recent advances to help her patients better.</p>
+    <br>
+    <p>Dr. Dave is known for her calm, empathetic, and supportive demeanor. She has a stern personality, with a soft
+        heart and a healing hand.</p>
+    <br>
+    <p>Through this venture, Dr. Vidhi Dave has hopes to make neuro-rehabilitation accessible in near future, to those
+        in need, regardless of their financial background. With her compassion and beliefs for helping others, Dr. Dave
+        is poised to make a lasting impact in the field of neuro-rehabilitation.</p>
 </div>
