--- a/search_results.html
+++ b/search_results.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/search.js"></script>
+    <script defer src="js/main.js"></script>
 </head>
+
 <body>
     <!-- Header -->
     <header>
@@ -46,4 +49,5 @@
         </div>
     </footer>
 </body>
+
 </html>
