Refactor CSS, fix mobile view, and improve search

--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,11 @@
             <input type="text" id="searchInput" placeholder="Search..." onkeypress="handleSearch(event)">
             <button onclick="triggerSearch()"><img src="images/search-icon.png" alt="Search"></button>
         </div>
+        <button class="hamburger" onclick="toggleMobileMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
     </header>
 
     <!-- Main Content -->
