--- a/search_results.html
+++ b/search_results.html
@@ -25,6 +25,11 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
+        <button class="hamburger" onclick="toggleMobileMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
     </header>
 
     <!-- Search Results Section -->
