--- a/about_us.html
+++ b/about_us.html
@@ -27,19 +27,24 @@
             <input type="text" id="searchInput" placeholder="Search..." onkeypress="handleSearch(event)">
             <button onclick="triggerSearch()"><img src="images/search-icon.png" alt="Search"></button>
         </div>
+        <button class="hamburger" onclick="toggleMobileMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
     </header>
 
-    <section class="hero">
+    <section class="hero" id="hero">
         <h2>South Mumbai's First Neuro-rehabilitation Centre with Admission Facility</h2>
     </section>
     <!-- Main Content -->
     <main>
-        <section class="about-header">
+        <section class="about-header" id="about-header">
             <h1>About Us</h1>
             <p>Providing comprehensive rehabilitation programs tailored to individual needs.</p>
         </section>
 
-        <section class="who-benefits">
+        <section class="who-benefits" id="who-benefits">
             <h2>Who will benefits from our services:</h2>
             <ul>
                 <li>✔ <strong>With Neurological conditions requiring intensive rehabilitation</strong> (Stroke, MS, GBS,
@@ -58,7 +63,7 @@
             </ul>
         </section>
 
-        <section class="how-different">
+        <section class="how-different" id="how-different">
             <h2>How are we different</h2>
 
             <div class="difference-card">
