Fix mobile menu visibility, search alignment, and add search box to results page

--- a/search_results.html
+++ b/search_results.html
@@ -25,6 +25,11 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
+        <!-- Search Box with Icon -->
+        <div class="search-box">
+            <input type="text" id="searchInput" placeholder="Search..." onkeypress="handleSearch(event)">
+            <button onclick="triggerSearch()"><img src="images/search-icon.png" alt="Search"></button>
+        </div>
         <button class="hamburger" onclick="toggleMobileMenu()">
             <span></span>
             <span></span>
