Refine mobile UI, fix search, and update social media links

--- a/contact.html
+++ b/contact.html
@@ -125,9 +125,8 @@
                 <!-- Social Media -->
                 <div class="footer-right">
                     <h2>Follow Us</h2>
-                    <a href="#" class="social-icon"><img src="images/facebook-icon.png" alt="Facebook"></a>
-                    <a href="#" class="social-icon"><img src="images/instagram-icon.png" alt="Instagram"></a>
-                    <a href="#" class="social-icon"><img src="images/twitter-icon.png" alt="Twitter"></a>
+                    <a href="https://www.instagram.com/the_rehab_house/" class="social-icon"><img
+                            src="images/instagram-icon.png" alt="Instagram"></a>
                 </div>
             </div>
         </footer>
