--- a/search_results.html
+++ b/search_results.html
@@ -52,9 +52,8 @@
             <p class="footer-left">&copy; 2025 The Rehab House</p>
             <div class="footer-right">
                 <h2>Follow Us</h2>
-                <a href="#" class="social-icon"><img src="images/facebook-icon.png" alt="Facebook"></a>
-                <a href="#" class="social-icon"><img src="images/instagram-icon.png" alt="Instagram"></a>
-                <a href="#" class="social-icon"><img src="images/twitter-icon.png" alt="Twitter"></a>
+                <a href="https://www.instagram.com/the_rehab_house/" class="social-icon"><img
+                        src="images/instagram-icon.png" alt="Instagram"></a>
             </div>
         </div>
     </footer>
