Fix booking form, search focus, dropdown styling, and add SEO tags

--- a/about_us.html
+++ b/about_us.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | The Rehab House</title>
+    <meta name="description"
+        content="Learn about The Rehab House, our mission, vision, and the expert team dedicated to your recovery and rehabilitation.">
+    <meta name="keywords"
+        content="About Rehab House, Dr. Vidhi Dave, Dr. Vinit Gada, Rehabilitation Team, Mission Vision">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
