--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us | The Rehab House</title>
+    <meta name="description"
+        content="Contact The Rehab House for appointment bookings and inquiries. Located at Purandare Diagnostic Centre, Mumbai.">
+    <meta name="keywords"
+        content="Contact Rehab House, Appointment, Physiotherapy Appointment, Neurorehabilitation Mumbai, Clinic Location">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -84,7 +88,7 @@
         <!-- Book an Appointment Form -->
         <section class="contact-form">
             <h2>Book an Appointment</h2>
-            <form action="submit_form.php" method="POST">
+            <form action="mailto:contact@therehabhouse.in" method="post" enctype="text/plain">
                 <label for="name">Full Name</label>
                 <input type="text" id="name" name="name" required>
 
