--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | The Rehab House - Update</title>
+    <meta name="description"
+        content="The Rehab House - South Mumbai's First Neuro-rehabilitation Centre with Admission Facility. We offer Physiotherapy, Neurorehabilitation, Pain Management, and more.">
+    <meta name="keywords"
+        content="Neurorehabilitation, Physiotherapy, Mumbai, Rehabilitation Centre, Paralysis, Stroke Recovery, Pain Management, Occupational Therapy">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
