--- a/search_results.html
+++ b/search_results.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Results | The Rehab House</title>
+    <meta name="robots" content="noindex, follow"> <!-- Often good for search results -->
+    <meta name="description" content="Search results for The Rehab House services and information.">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/search.js"></script>
