--- a/services.html
+++ b/services.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Services | The Rehab House</title>
+    <meta name="description"
+        content="Explore our services including Physiotherapy, Neurorehabilitation, Pain Management, Orthopedic Therapy, and more at The Rehab House.">
+    <meta name="keywords"
+        content="Physiotherapy Services, Neurorehabilitation, Pain Management, Orthopedic Therapy, Pediatric Rehabilitation, Sports Injury">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
