Add Admin Login link to footers

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <p class="footer-left">&copy; 2025 The Rehab House</p>
+            <p class="footer-left">&copy; 2025 The Rehab House | <a href="admin/login.html"
+                    style="color: inherit; text-decoration: none;">Admin Login</a></p>
 
             <!-- Social Media -->
             <div class="footer-right">
