--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
         <!-- Book an Appointment Form -->
         <section class="contact-form">
             <h2>Book an Appointment</h2>
-            <form action="mailto:contact@therehabhouse.in" method="post" enctype="text/plain">
+            <form onsubmit="handleAppointmentSubmit(event)">
                 <label for="name">Full Name</label>
                 <input type="text" id="name" name="name" required>
 
