--- a/profiles/appointment.html
+++ b/profiles/appointment.html
@@ -13,7 +13,7 @@
         <span class="close-popup" onclick="window.parent.closePopup()">×</span>
 
         <h2>Book an Appointment</h2>
-        <form action="mailto:contact@therehabhouse.in" method="post" enctype="text/plain">
+        <form onsubmit="window.parent.handleAppointmentSubmit(event)">
             <label for="name">Full Name</label>
             <input type="text" id="name" name="name" required>
 
