Implement site improvements: Blog, Testimonials, FAQ, BackToTop

--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
                 <li><a href="services.html">Our Services</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
@@ -135,6 +136,9 @@
                 </div>
             </div>
         </footer>
+
+        <!-- Back to Top Button -->
+        <button class="back-to-top" id="backToTop" onclick="scrollToTop()">↑</button>
 
         <!-- JavaScript -->
         <script src="js/main.js"></script>
