--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
                 <li><a href="services.html">Our Services</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
@@ -81,6 +82,28 @@
         </div>
     </section>
 
+    <!-- Testimonials Section -->
+    <section class="testimonials" id="testimonials">
+        <h2>What Our Patients Say</h2>
+        <div class="testimonial-grid">
+            <div class="testimonial-card">
+                <p>"The team at The Rehab House is phenomenal. My father recovered from his stroke much faster than we
+                    expected thanks to their intensive program."</p>
+                <h4>- Rahul Mehta</h4>
+            </div>
+            <div class="testimonial-card">
+                <p>"I was suffering from severe back pain for years. The pain management therapy here gave me my life
+                    back. Highly recommended!"</p>
+                <h4>- Priya Sharma</h4>
+            </div>
+            <div class="testimonial-card">
+                <p>"Excellent facility with caring staff. The admission facility made it so easy for us to manage my
+                    mother's rehab."</p>
+                <h4>- Amit Desouza</h4>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer>
         <div class="footer-content">
@@ -96,6 +119,9 @@
         </div>
     </footer>
 
+
+    <!-- Back to Top Button -->
+    <button class="back-to-top" id="backToTop" onclick="scrollToTop()">↑</button>
 
     <!-- JavaScript -->
     <script src="js/main.js"></script>
