--- a/about_us.html
+++ b/about_us.html
@@ -23,6 +23,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
                 <li><a href="services.html">Our Services</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
@@ -137,7 +138,8 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <p class="footer-left">&copy; 2025 The Rehab House</p>
+            <p class="footer-left">&copy; 2025 The Rehab House | <a href="admin/login.html"
+                    style="color: inherit; text-decoration: none;">Admin Login</a></p>
 
             <!-- Social Media -->
             <div class="footer-right">
@@ -148,6 +150,9 @@
         </div>
     </footer>
 
+
+    <!-- Back to Top Button -->
+    <button class="back-to-top" id="backToTop" onclick="scrollToTop()">↑</button>
 
     <!-- JavaScript -->
     <script src="js/main.js"></script>
